# im-csm-sdk-python

./: .copier-answers.yml  .cursorrules  .env.template  .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: configuration.md  example.md  index.md  intro.md  troubleshooting.md
docs/example/: calc.py
docs/examples/: index.md
docs/reference/: configuration.md  example.md  index.md  intro.md
example/: main.py
im_csm_sdk_python/: __init__.py  main.py
im_csm_sdk_python/configs/: config.py  db.py  logger.py
im_csm_sdk_python/core/: contacts.py  messages.py  status.py
im_csm_sdk_python/helpers/: api_request.py  authentication.py
im_csm_sdk_python/schemas/: contacts.py  messages.py  request.py
im_csm_sdk_python/utils/: param_utils.py  sort_params.py  timeit.py
tests/: test_main.py
